--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,16 @@
 {
-    "name": ":vendor_slug/:package_slug",
-    "description": ":package_description",
+    "name": "mesba/unit-sonversion",
+    "description": "perform unit conversion in php",
     "keywords": [
-        ":vendor_name",
-        ":package_slug"
+        "mesba",
+        "unit conversions"
     ],
     "homepage": "https://github.com/:vendor_slug/:package_slug",
     "license": "MIT",
     "authors": [
         {
-            "name": ":author_name",
-            "email": "author@domain.com",
+            "name": "mesba",
+            "email": "mesbansu@gmail.com",
             "role": "Developer"
         }
     ],
@@ -18,28 +18,31 @@
         "php": "^8.1"
     },
     "require-dev": {
-        :require_dev_testing,
-        :require_dev_codestyle,
+        "phpunit/phpunit": "^10.0",
+        "phpstan/phpstan": "^1.0",
+        "friendsofphp/php-cs-fixer": "^3.0",
         "spatie/ray": "^1.28"
     },
     "autoload": {
         "psr-4": {
-            "VendorName\\Skeleton\\": "src"
+            "mesba\\unit-conversion\\": "src
+            "
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "VendorName\\Skeleton\\Tests\\": "tests"
+            "mesba\\unit-conversion\\Tests\\
+            ": "tests"
         }
     },
     "scripts": {
-        :scripts_testing,
-        :scripts_codestyle
+        "test": "phpunit",
+        "codestyle": "phpcs"
     },
     "config": {
         "sort-packages": true,
         "allow-plugins": {
-            :plugins_testing,
+            "phpunit/phpunit": true,
             "phpstan/extension-installer": true
         }
     },
