--- a/composer.json
+++ b/composer.json
@@ -19,9 +19,9 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^10.0",
-        "phpstan/phpstan": "^1.0",
-        "friendsofphp/php-cs-fixer": "^3.0",
-        "spatie/ray": "^1.28"
+
+        "friendsofphp/php-cs-fixer": "^3.0"
+
     },
     "autoload": {
         "psr-4": {
@@ -34,14 +34,14 @@
         }
     },
     "scripts": {
-        "test": "phpunit",
+        "test": "vendor/bin/phpunit",
         "codestyle": "phpcs"
     },
     "config": {
         "sort-packages": true,
         "allow-plugins": {
-            "phpunit/phpunit": true,
-            "phpstan/extension-installer": true
+            "phpunit/phpunit": true
+
         }
     },
     "minimum-stability": "dev",
